# Denoiser

./: .gitignore  AGENTS.md  CONTEXT.md  DESIGN.md  README.md  ci_8d_deck.html  package-lock.json  package.json  pyproject.toml  requirements.txt
assets/icons/: denoiser_icon.icns
docs/: windows-build-and-package.md  windows-release-verification.md
docs/adr/: 0001-use-pyside6-for-windows-desktop-ui.md  0002-bundle-onnx-models-for-offline-cpu-runtime.md  0003-use-minimal-local-onnx-wrapper-instead-of-upstream-tk-r-em-runtime.md  0004-use-nicegui-native-window-for-desktop-ui.md
docs/agents/: domain.md  issue-tracker.md
licenses/: THIRD_PARTY_NOTICES.md
scripts/: build_windows.ps1  check_dm3_pyinstaller_imports.py  inspect_tiff_metadata.py
src/denoiser/: __init__.py  __main__.py  app.py  app_icon.py  batch_presentation.py  engine.py  image_io.py  models.py  nicegui_shell.py  output_paths.py  preview_presentation.py  runtime_paths.py  single_image_inspection.py  workflow.py
src/denoiser/ui/: batch_restore_runner.py  batch_result_row.py  theme.py  (+3 more)
tests/: test_app_entrypoint.py  test_app_icon.py  test_batch_presentation.py  test_batch_restore_runner.py  test_batch_result_row.py  test_batch_ui.py  test_batch_workflow.py  test_compare_view.py  test_documentation_contract.py  test_engine.py  test_image_io.py  test_nicegui_shell.py  test_output_paths.py  test_preview_presentation.py  test_restore_task_runner.py  test_single_image_inspection.py  test_single_ui.py  test_single_workflow.py  test_tiff_metadata_script.py  test_ui_theme.py  test_windows_build_script.py
